# first-rust-app

./: .dockerignore  .env.example  .teller.yml  CLAUDE.md  Cargo-spin.toml  Cargo.toml  Dockerfile  LICENSE  Procfile  TESTING.md  Tiltfile  cloudbuild.yaml  docker-compose.test.yml  justfile  kind-cluster.yaml  local.Dockerfile  package.json  playwright.config.ts  readme.md  skaffold.yaml  spin.toml  start-server-for-tests.sh  test-config.toml
.circleci/: config.yml
.github/workflows/: rust.yml  test.yml
.harness/: Build_first_rust_app_1690160375734-pr-trigger-input-set-1690160376674.yaml  Build_first_rust_app_1690160375734-push-trigger-input-set-1690160378034.yaml
.harness/pipelines/: first-rust-app-1690160360187.yaml
bindings/: Book.ts  User.ts
e2e-tests/: auth.spec.ts  global-setup.ts  global-teardown.ts  health.spec.ts  users.spec.ts
k8s/: kustomization.yaml
k8s/app/: deployment.yaml
k8s/base/: deployment.yml  ingress.yaml  kustomization.yml  service-account.yaml  service.yml
k8s/cnpg/: cluster.yaml
k8s/db/: postgres.yaml
k8s/gitops/: git-repository.yaml  kustomization.yaml
k8s/gitops/argo/: kustomization.yaml
k8s/gitops/flux/: git-repository.yaml  kustomization-resource.yaml  kustomization.yaml  namespace.yaml
k8s/influxdb/: deployment.yaml
k8s/kor/: resourcegraphdefinition.yaml
k8s/mongodb/: deployment.yaml
k8s/redis/: deployment.yaml
k8s/vela/: vela.yaml
migrations/: 001_init.sql
scripts/: cleanup.nu  config.nu  custom-config.nu  setup.nu
scripts/local/: cluster.nu  mod.nu
src/: config.rs  lib.rs  main.rs  model.rs  state.rs  status.rs  test.rs
src/auth/: jwt.rs  mod.rs  password.rs
src/database/: mod.rs  mongodb.rs  postgres.rs  redis.rs
src/handlers/: auth.rs  health.rs  mod.rs  users.rs
src/middleware/: auth.rs
src/models/: auth.rs  mod.rs  user.rs
src/services/: mod.rs  mongo.rs  redis_service.rs  user_service.rs
src/shared/: mod.rs
tests/: basic_integration.rs
