[package]
name = "first-rust-app"
version = "0.1.2"
edition = "2021"
description = "My app"

[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true

[dependencies]
actix-web = { version = "4.9", features = ["default"] }
mongodb = "3.2"
serde = "1.0.218"
ts-rs = "10.1"
tokio = { version = "1.43", features = ["full"] }
dotenv = "0.15.0"
