[package]
name = "first-rust-app"
version = "0.1.2"
edition = "2021"
description = "My app"

[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true

[dependencies]
actix-web = { version = "4.11", features = ["default"] }
mongodb = "3.2"
serde = "1.0"
ts-rs = "11.0"
tokio = { version = "1.47", features = ["full"] }
dotenv = "0.15"
