[workspace]
resolver = '2'
members = [
#    'libs/rust/services',
#    'apps/zerg/api',
#    'apps/protos/api',
#    'apps/terran/api',
#    'libs/models/book',
#    'libs/models/customer',
]

[package]
name = "first-rust-app"
version = "0.1.2"
edition = "2021"
description = "My app"


[profile.release]
opt-level = "z"
codegen-units = 1
strip = true
lto = true

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.47", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "sqlite"] }
redis = { version = "1.0.0-alpha", features = ["tokio-comp"] }
mongodb = "3.2.4"
jsonwebtoken = "9.3"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
bcrypt = "0.17"
anyhow = "1.0"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
ts-rs = "11.0"

[dev-dependencies]
tokio-test = "0.4"
claims = "0.8"
futures = "0.3"
tempfile = "3.20"
